--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ ipython-genutils==0.2.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
 jupyter-core==4.5.0
+lxml==4.7.1
 MarkupSafe==1.1.1
 nbformat==4.4.0
 numpy==1.16.4
